# Py-AdventOfCode

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: codeql-analysis.yml  links.yml  test-solutions.yml
2015/: README.md  main.py
2015/01/: README.md  main.py
2015/02/: README.md  main.py
2015/03/: README.md  main.py
2015/04/: README.md  main.py
2015/05/: README.md  main.py
2015/06/: README.md  main.py
2015/07/: README.md  main.py
2015/08/: README.md  main.py
2015/09/: README.md  main.py
2015/10/: README.md  main.py
2015/11/: README.md  main.py
2015/12/: README.md  input  main.py
2015/13/: README.md  main.py
2015/14/: README.md  main.py
2015/15/: README.md  main.py
2015/16/: README.md  main.py
2015/17/: README.md  main.py
2015/18/: README.md  main.py
2015/19/: README.md  main.py
2015/20/: README.md  main.py
2015/21/: README.md  main.py
2015/22/: README.md  main.py
2015/23/: README.md  main.py
2015/24/: README.md  main.py
2015/25/: README.md  main.py
2016/: README.md  main.py
2016/01/: README.md  main.py  y.py
2016/02/: README.md  main.py
2016/03/: README.md  main.py
2016/04/: README.md  main.py
2016/05/: README.md  main.py
2016/06/: README.md  main.py
2016/07/: README.md  main.py
2016/08/: README.md  main.py
2016/09/: README.md  example  main.py
2016/10/: README.md  main.py
2016/11/: README.md
2016/12/: README.md  main.py
2016/13/: README.md  (+1 more)
base/: new_year.py
(+27 files in other folders)
