[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py-adventofcode"
version = "1.0.0"
description = "Advent of Code solutions in Python"
readme = "README.md"
requires-python = ">=3.8"

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
# Enable: pycodestyle (E, W), Pyflakes (F), isort (I), pyupgrade (UP)
select = ["E", "W", "F", "I", "UP", "N", "B", "A", "C4", "PL"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"input" = ["ALL"]
"**/input" = ["ALL"]
"README.md" = ["ALL"]
"**/README.md" = ["ALL"]
"2015/22/main.py" = ["PLR0911"]  # battle() algorithm complexity
"2016/22/main.py" = ["PLR0912"]  # Grid construction logic

[tool.ruff.lint.isort]
known-first-party = ["config"]
